# cpp_tasks

book_task/: CMakeLists.txt  book.cpp  book.h  main.cpp
cppsockets/: client  client.cpp  server  server.cpp
cppsockets_chnange/: client.cpp  server.cpp
day1_tasks/: CMakeLists.txt  main.cpp
enum_task/: CMakeLists.txt  main.cpp
inheritance_task/: CMakeLists.txt  main.cpp  shape.h
ptr_ref_task/: CMakeLists.txt  main.cpp
sort_task/: CMakeLists.txt  main.cpp
str_arr_task/: CMakeLists.txt  main.cpp
txt_project/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
